--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 	<p>Welcom to the chat app</p>
+
+	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
+	<script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
