--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,17 @@
 <body>
 	<p>Welcom to the chat app</p>
 
+	<ol id="messages"></ol>
+
+	<form id="message-form">
+		<input type="text" name="message" placeholder="Message" />
+		<button>Send</button>
+	</form>
+
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
 	<script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
