--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-	<p>Welcom to the chat app</p>
 
-	<ol id="messages"></ol>
+<body class="chat">
 
-	<form id="message-form">
-		<input type="text" name="message" placeholder="Message" />
-		<button>Send</button>
-	</form>
+	<div class="chat__sidebar">
+		<h3>People</h3>
+		<div id="users"></div>
+	</div>
+
+	<div class="chat__main">
+		<ol id="messages" class="chat__messages"></ol>
+
+		<div class="chat__footer">
+			<form id="message-form">
+				<input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+				<button>Send</button>
+			</form>
+			<button id="send-location">Send location</button>
+		</div>
+	</div>
+
 
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
